--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Praktikum 2</title>
 </head>
 <body>
-    <h1>Satria Wirabuana Mahardhika</h1>
+    <section>
+        <img src="Satsatsat.png">
+        <h1>Satria Wirabuana Mahardhika</h1>
+        <h4>Universitas Muhammadiyah Yogyakarta</h4>
+    </section>
 </body>
 </html>
