--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section>
-        <img src="Satsatsat.png">
+        <img src="Satsatsat.png" height="30" width="30">
         <h1>Satria Wirabuana Mahardhika</h1>
         <h4>Universitas Muhammadiyah Yogyakarta</h4>
     </section>
