--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
     <title>Praktikum 2</title>
 </head>
 <body>
-    <section>
-        <img src="Satsatsat.png" height="200" width="200">
-        <h1>Satria Wirabuana Mahardhika</h1>
-        <h4>Universitas Muhammadiyah Yogyakarta</h4>
+    <section style="text-align: center;">
+        <div class="w3-third">
+            <div class="w3-white w3-text-grey w3-card-4">
+              <div class="w3-display-container">
+                <img src="Satsatsat.png" style="width:100%" alt="Avatar">
+                <div class="w3-display-bottomleft w3-container w3-text-black">
+                  <h2>Satria Wirabuana Mahardhika</h2>
+                </div>
+              </div>
+              <div class="w3-container">
+                <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Mahasiswa</p>
+                <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Yogyakarta, Indonesia</p>
+                <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>swmahardhika@gmail.com</p>
+                <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>082178772915</p>
+                <hr>
     </section>
 </body>
 </html>
