--- a/index.html
+++ b/index.html
@@ -7,21 +7,238 @@
     <title>Praktikum 2</title>
 </head>
 <body>
-    <section style="text-align: center;">
-        <div class="w3-third">
-            <div class="w3-white w3-text-grey w3-card-4">
-              <div class="w3-display-container">
-                <img src="Satsatsat.png" style="width:100%" alt="Avatar">
-                <div class="w3-display-bottomleft w3-container w3-text-black">
-                  <h2>Satria Wirabuana Mahardhika</h2>
-                </div>
-              </div>
-              <div class="w3-container">
-                <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Mahasiswa</p>
-                <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Yogyakarta, Indonesia</p>
-                <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>swmahardhika@gmail.com</p>
-                <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>082178772915</p>
-                <hr>
-    </section>
+	<div class="wrapper">
+		<div class="resume">
+			<div class="left">
+				<div class="img_holder">
+					<img src="Satsatsat.png" alt="picture">
+				</div>
+				<div class="contact_wrap pb">
+					<div class="title">
+						Contact
+					</div>
+					<div class="contact">
+						<ul>
+							<li>
+								<div class="li_wrap">
+									<div class="icon"><i class="fas fa-mobile-alt" aria-hidden="true"></i></div>
+									<div class="text">082178772915</div>
+								</div>
+							</li>
+							<li>
+								<div class="li_wrap">
+									<div class="icon"><i class="fas fa-envelope" aria-hidden="true"></i></div>
+									<div class="text">swmahardhika@gmail.com</div>
+								</div>
+							</li>
+							<li>
+								<div class="li_wrap">
+									<div class="icon"><i class="fas fa-map-signs" aria-hidden="true"></i></div>
+									<div class="text">Yogyakarta, Indonesia</div>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="skills_wrap pb">
+					<div class="title">
+						Skills
+					</div>
+					<div class="skills">
+						<ul>
+							<li>
+								<div class="li_wrap">
+									<div class="icon"><i class="fab fa-html5"></i></div>
+									<div class="text">Adobe Photoshop</div>
+								</div>
+							</li>
+							<li>
+								<div class="li_wrap">
+									<div class="icon"><i class="fab fa-css3-alt"></i></div>
+									<div class="text">Adobe Illustrator</div>
+								</div>
+							</li>
+							<li>
+								<div class="li_wrap">
+									<div class="icon"><i class="fab fa-js"></i></div>
+									<div class="text">Adobe Premiere Pro</div>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="hobbies_wrap pb">
+					<div class="title">
+						hobi-ku
+					</div>
+					<div class="hobbies">
+						<ul>
+							<li>
+								<div class="li_wrap">
+									<div class="icon"><i class="fas fa-music"></i></div>
+									<div class="text">Bermain Musik</div>
+								</div>
+							</li>
+							<li>
+								<div class="li_wrap">
+									<div class="icon"><i class="fas fa-gamepad"></i></div>
+									<div class="text">Bermain Game</div>
+								</div>
+							</li>
+							<li>
+								<div class="li_wrap">
+									<div class="icon"><i class="fas fa-cloud"></i></div>
+									<div class="text">Berpetualang</div>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="right">
+				<div class="header">
+					<div class="name_role">
+						<div class="name">
+							Ania Bukstein
+						</div>
+						<div class="role">
+							UI UX Developer
+						</div>
+					</div>
+					<div class="about">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente dicta beatae optio, corporis fugit accusantium debitis laborum tenetur, quisquam distinctio nihil quam eum. Laudantium saepe, sunt, esse laboriosam dolores distinctio?
+					</div>
+				</div>
+				<div class="right_inner">
+					<div class="exp">
+						<div class="title">
+							experience
+						</div>
+						<div class="exp_wrap">
+							<ul>
+								<li>
+									<div class="li_wrap">
+										<div class="date">
+											2018 - Present
+										</div>
+										<div class="info">
+											<p class="info_title">
+												UI Team Lead
+											</p>
+											<p class="info_com">
+												Facebook
+											</p>
+											<p class="info_cont">
+												Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga voluptatibus consequatur rem nostrum omnis! Architecto.
+											</p>
+										</div>
+									</div>
+								</li>
+								<li>
+									<div class="li_wrap">
+										<div class="date">
+											2015 - 2018
+										</div>
+										<div class="info">
+											<p class="info_title">
+												UI Developer
+											</p>
+											<p class="info_com">
+												Amazon
+											</p>
+											<p class="info_cont">
+												Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga voluptatibus consequatur rem nostrum omnis! Architecto.
+											</p>
+										</div>
+									</div>
+								</li>
+								<li>
+									<div class="li_wrap">
+										<div class="date">
+											2014 - 2015
+										</div>
+										<div class="info">
+											<p class="info_title">
+												Junior UI Developer
+											</p>
+											<p class="info_com">
+												Coding Power
+											</p>
+											<p class="info_cont">
+												Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga voluptatibus consequatur rem nostrum omnis! Architecto.
+											</p>
+										</div>
+									</div>
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="education">
+						<div class="title">
+							Education
+						</div>
+						<div class="education_wrap">
+							<ul>
+								<li>
+									<div class="li_wrap">
+										<div class="date">
+											2010 - 2014
+										</div>
+										<div class="info">
+											<p class="info_title">
+												Computer Science
+											</p>
+											<p class="info_com">
+												Israel University
+											</p>
+											<p class="info_cont">
+												Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga voluptatibus consequatur rem nostrum omnis! Architecto.
+											</p>
+										</div>
+									</div>
+								</li>
+								<li>
+									<div class="li_wrap">
+										<div class="date">
+											2008 - 2010
+										</div>
+										<div class="info">
+											<p class="info_title">
+												Computer Science
+											</p>
+											<p class="info_com">
+												Israel Junior College
+											</p>
+											<p class="info_cont">
+												Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga voluptatibus consequatur rem nostrum omnis! Architecto.
+											</p>
+										</div>
+									</div>
+								</li>
+								<li>
+									<div class="li_wrap">
+										<div class="date">
+											1998 - 2008
+										</div>
+										<div class="info">
+											<p class="info_title">
+												Schooling
+											</p>
+											<p class="info_com">
+												Israel School
+											</p>
+											<p class="info_cont">
+												Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga voluptatibus consequatur rem nostrum omnis! Architecto.
+											</p>
+										</div>
+									</div>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
