--- a/index.html
+++ b/index.html
@@ -13,16 +13,18 @@
         <h4 style="font-size: 20px; font-weight: bold;">Universitas Muhammadiyah Yogyakarta</h4>
     </section>
     <section style="text-align: center;">
-        <tr>
-            <th>Tempat Lahir</th>
-            <th>Tanggal Lahir</th>
-            <th>Lulusan</th>
-        </tr>
-        <tr>
-            <td>Lubuk Linggau</td>
-            <td>24 Maret 2001</td>
-            <td>Teknologi Informasi, UMY</td>
-        </tr>
+        <table>
+            <tr>
+                <th>Tempat Lahir</th>
+                <th>Tanggal Lahir</th>
+                <th>Lulusan</th>
+            </tr>
+            <tr>
+                <td>Lubuk Linggau</td>
+                <td>24 Maret 2001</td>
+                <td>Teknologi Informasi, UMY</td>
+            </tr>
+        </table>
     </section>
     <section>
         <img style="text-align:left " src="ig.png" height="200" width="200">
