--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <section style="text-align: center;">
         <img style="border-radius: 100%;" src="Satsatsat.png" height="200" width="200">
-        <h1 style="font-size: 16px; font-weight:bold;">Satria Wirabuana Mahardhika</h1>
-        <h4 style="font-size: 20px; font-weight: bold;">Universitas Muhammadiyah Yogyakarta</h4>
+        <h1 style="font-size: 20px; font-weight:bold;">Satria Wirabuana Mahardhika</h1>
+        <h2 style="font-size: 18px; font-weight: bold;">Universitas Muhammadiyah Yogyakarta</h4>
     </section>
-    <section style="text-align: center;">
+    <section style="vertical-align: middle;">
         <table>
             <tr>
                 <th>Tempat Lahir</th>
@@ -27,7 +27,15 @@
         </table>
     </section>
     <section>
-        <img style="text-align:left " src="ig.png" height="200" width="200">
+        <a href="instagram.com/swmahardhika">
+            <img style="text-align: left; " src="ig.png" height="200" width="200">
+        </a>
+        <a href="twitter.com/heymyluvv">
+            <img style="text-align: center; " src="tw.png" height="200" width="200">
+        </a>
+        <a href="facebook.com/satriawirabuana">
+            <img style="text-align: right; " src="fb.png" height="200" width="200">
+        </a>
     </section>
 </body>
 </html>
