--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
             </tr>
         </table>
     </section>
-    <section>
+    <section style="text-align: center;" style="margin: 5pt;">
         <a href="instagram.com/swmahardhika">
-            <img style="text-align: left; " src="ig.png" height="200" width="200">
+            <img style="text-align: left; " src="ig.png" height="100" width="100">
         </a>
         <a href="twitter.com/heymyluvv">
-            <img style="text-align: center; " src="tw.png" height="200" width="200">
+            <img style="text-align: center; " src="tw.png" height="100" width="100">
         </a>
         <a href="facebook.com/satriawirabuana">
-            <img style="text-align: right; " src="fb.png" height="200" width="200">
+            <img style="text-align: right; " src="fb.png" height="100" width="100">
         </a>
     </section>
 </body>
