--- a/index.html
+++ b/index.html
@@ -4,36 +4,90 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Praktikum 2</title>
+    <title>Curriculum Vitae</title>
 </head>
 <body>
     <section style="text-align: center;">
         <img style="border-radius: 100%;" src="Satsatsat.png" height="200" width="200">
         <h1 style="font-size: 20px; font-weight:bold;">Satria Wirabuana Mahardhika</h1>
-        <h2 style="font-size: 18px; font-weight: bold;">Universitas Muhammadiyah Yogyakarta</h4>
+        <h2 style="font-size: 18px; font-weight: bold;">Universitas Muhammadiyah Yogyakarta</h2>
     </section>
-    <section style="vertical-align: middle;">
-        <table>
-            <tr>
-                <th>Tempat Lahir</th>
-                <th>Tanggal Lahir</th>
-                <th>Lulusan</th>
-            </tr>
-            <tr>
-                <td>Lubuk Linggau</td>
-                <td>24 Maret 2001</td>
-                <td>Teknologi Informasi, UMY</td>
-            </tr>
-        </table>
+    <section>
+        <table width="800px">
+            <tbody>
+
+              <tr>
+                <td>Tempat, Tanggal Lahir</td>
+                <td>:</td>
+                <td>Lubuk Linggau, 24 Maret 2001</td>
+              </tr>
+              <tr>
+                <td>Alamat</td>
+                <td>:</td>
+                <td>Yogyakarta, Indonesia</td>
+              </tr>
+             <td>Email</td>
+                <td>:</td>
+                <td>swmahardhika@gmail.com</td>
+              </tr>
+            </tbody>
+          </table>
+        <h3>Pendidikan Formal</h3>
+          <table width="800px">
+            <tbody>
+              <tr>
+                <td width="25%">2019 - Sekarang</td>
+                <td width="1%">:</td>
+                <td>Universitas Muhammadiyah Yogyakarta</td>
+              </tr>
+              <tr>
+                <td>2016 - 2019</td>
+                <td>:</td>
+                <td>SMAN 1 Rejang Lebong</td>
+              </tr>
+              <tr>
+                <td>2013 - 2016</td>
+                <td>:</td>
+                <td>SMPN 5 Rejang Lebong</td>
+              <tr>
+                <td>2007 - 2013</td>
+                <td>:</td>
+                <td>SDN 1 Rejang Lebong</td>
+              </tr>
+              </tr>
+              <tr>
+                <td>2006 - 2007</td>
+                <td>:</td>
+                <td>TK Aisyiah Bustanul Athfal, Rejang Lebong</td>
+              </tr>
+            </tbody>
+          </table>
+        <h4>Pengalaman Organisasi</h4>
+          <table width="800px">
+           <tbody>
+              <tr>
+                <td width="25%">2018 - Sekarang</td>
+                <td width="1%">:</td>
+                <td>Ketua Koordinator PDD</td>
+              </tr>
+              <tr>
+                <td>November 2016 - 2018</td>
+                <td width="1%">:</td>
+                <td>Kepala Divisi Kemanan</td>
+              </tr>
+            </tbody>
+           </table>
+      </body>
+      </html>
     </section>
     <section style="text-align: center;" style="margin: 5pt;">
-        <a href="instagram.com/swmahardhika">
+        <a href="https://www.instagram.com/swmahardhika/">
             <img style="text-align: left; " src="ig.png" height="100" width="100">
         </a>
-        <a href="twitter.com/heymyluvv">
+        <a href="https://twitter.com/heymyluvv">
             <img style="text-align: center; " src="tw.png" height="100" width="100">
         </a>
-        <a href="facebook.com/satriawirabuana">
+        <a href="https://www.facebook.com/satriawirabuana/">
             <img style="text-align: right; " src="fb.png" height="100" width="100">
         </a>
     </section>
