--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
     <title>Curriculum Vitae</title>
 </head>
 <body>
+    <body background="Preppy-Blog-post-header-3.jpg" style="background-size: cover;"></body>
     <section style="text-align: center;">
-        <img style="border-radius: 100%;" src="Satsatsat.png" height="200" width="200">
+        <img style="border-radius: 100%;" style="stroke-width: 10pt;" src="Satsatsat.png" height="200" width="200">
         <h1 style="font-size: 20px; font-weight:bold;">Satria Wirabuana Mahardhika</h1>
-        <h2 style="font-size: 18px; font-weight: bold;">Universitas Muhammadiyah Yogyakarta</h2>
+        <h2 style="font-size: 16px; font-weight: lighter;">Universitas Muhammadiyah Yogyakarta</h2>
     </section>
     <section>
         <table width="800px">
             <tbody>
 
               <tr>
-                <td>Tempat, Tanggal Lahir</td>
-                <td>:</td>
+                <td widht="25%">Tempat, Tanggal Lahir</td>
+                <td widht="1%">:</td>
                 <td>Lubuk Linggau, 24 Maret 2001</td>
               </tr>
               <tr>
@@ -31,9 +32,11 @@
                 <td>swmahardhika@gmail.com</td>
               </tr>
             </tbody>
-          </table>
-        <h3>Pendidikan Formal</h3>
-          <table width="800px">
+        </table>
+        <hr>
+        <b>Pendidikan Formal</b>
+        <hr>
+        <table width="800px">
             <tbody>
               <tr>
                 <td width="25%">2019 - Sekarang</td>
@@ -61,8 +64,10 @@
                 <td>TK Aisyiah Bustanul Athfal, Rejang Lebong</td>
               </tr>
             </tbody>
-          </table>
-        <h4>Pengalaman Organisasi</h4>
+        </table>
+        <hr>
+        <b>Pengalaman Organisasi</b>
+        <hr>
           <table width="800px">
            <tbody>
               <tr>
@@ -77,18 +82,17 @@
               </tr>
             </tbody>
            </table>
-      </body>
-      </html>
+        </hr>
     </section>
-    <section style="text-align: center;" style="margin: 5pt;">
+    <section style="text-align: center;" style="margin: 15pt;">
         <a href="https://www.instagram.com/swmahardhika/">
-            <img style="text-align: left; " src="ig.png" height="100" width="100">
+            <img style="text-align: left; " src="ig.png" height="50" width="50">
         </a>
         <a href="https://twitter.com/heymyluvv">
-            <img style="text-align: center; " src="tw.png" height="100" width="100">
+            <img style="text-align: center; " src="tw.png" height="50" width="50">
         </a>
         <a href="https://www.facebook.com/satriawirabuana/">
-            <img style="text-align: right; " src="fb.png" height="100" width="100">
+            <img style="text-align: right; " src="fb.png" height="50" width="50">
         </a>
     </section>
 </body>
