--- a/index.html
+++ b/index.html
@@ -6,15 +6,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae</title>
 </head>
+<style>
+  body, h1, h2, p,h3,  a,td, span {
+      font-family: Arial, Helvetica, sans-serif;
+      text-decoration: none;
+  }
+  .wrap {
+      background-color:rgba(255, 255, 255, 0.7);
+      width: 800px;
+      color:black;
+      margin: 20px auto;
+      padding:15px;
+  }
+  .iconbg {
+    background-color: rgba(255, 255, 255, 0.7);
+    width: 260px;
+    margin: 20px auto;
+    padding: 15px;
+  }
+  .icon {
+      padding:5px;
+      text-align: center;
+  }
+  span {
+      color: maroon;
+  }
+
+.left, .right {
+  float: left;
+  width: 20%; /* The width is 20%, by default */
+}
+
+.main {
+  float: left;
+  width: 60%; /* The width is 60%, by default */
+}
+
+/* Use a media query to add a breakpoint at 800px: */
+@media screen and (max-width: 800px) {
+  .left, .main, .right {
+    width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
+  }
+}
+</style>
 <body>
-    <body background="Preppy-Blog-post-header-3.jpg" style="background-size: cover;"></body>
-    <section style="text-align: center;">
-        <img style="border-radius: 100%;" style="stroke-width: 10pt;" src="Satsatsat.png" height="200" width="200">
-        <h1 style="font-size: 20px; font-weight:bold;">Satria Wirabuana Mahardhika</h1>
-        <h2 style="font-size: 16px; font-weight: lighter;">Universitas Muhammadiyah Yogyakarta</h2>
+    <body style="background: url(abc.jpg); background-size: cover;background-attachment: fixed;"></body>
+    <section class="wrap" style="text-align: center;">
+        <img style="border-radius: 100%;" style="stroke-width: 10pt;" src="Insta.png" height="200" width="200">
+        <h1 class="h1">Satria Wirabuana Mahardhika</h1>
+        <h2 style="font-size: 16px; font-weight: lighter;">"Jika tugas mengganggu mu, maka tinggalkanlah."</h2>
+        <h3 style="font-size: 16px; font-weight: bolder;">Universitas Muhammadiyah Yogyakarta</h3>
     </section>
-    <section>
-        <table width="800px">
+    <section class="wrap" class="td">
+        <table width="480px">
             <tbody>
 
               <tr>
@@ -34,7 +78,7 @@
             </tbody>
         </table>
         <hr>
-        <b>Pendidikan Formal</b>
+        <span><b>Pendidikan Formal</b></span>
         <hr>
         <table width="800px">
             <tbody>
@@ -66,33 +110,33 @@
             </tbody>
         </table>
         <hr>
-        <b>Pengalaman Organisasi</b>
+        <span><b>Pengalaman Organisasi</b></span>
         <hr>
           <table width="800px">
            <tbody>
               <tr>
                 <td width="25%">2018 - Sekarang</td>
                 <td width="1%">:</td>
-                <td>Ketua Koordinator PDD</td>
+                <td>Ketua Koordinator PDD C-Bizi </td>
               </tr>
               <tr>
                 <td>November 2016 - 2018</td>
                 <td width="1%">:</td>
-                <td>Kepala Divisi Kemanan</td>
+                <td>Kepala Divisi Kemanan OSIS</td>
               </tr>
             </tbody>
            </table>
         </hr>
     </section>
-    <section style="text-align: center;" style="margin: 15pt;">
-        <a href="https://www.instagram.com/swmahardhika/">
-            <img style="text-align: left; " src="ig.png" height="50" width="50">
+    <section class="iconbg" style="text-align: center;">
+        <a class="icon" href="https://www.instagram.com/swmahardhika/">
+            <img src="ig.png" height="50" width="50" >
         </a>
-        <a href="https://twitter.com/heymyluvv">
-            <img style="text-align: center; " src="tw.png" height="50" width="50">
+        <a class="icon" href="https://twitter.com/heymyluvv">
+            <img src="tw.png" height="50" width="50" >
         </a>
-        <a href="https://www.facebook.com/satriawirabuana/">
-            <img style="text-align: right; " src="fb.png" height="50" width="50">
+        <a class="icon" href="https://www.facebook.com/satriawirabuana/">
+            <img src="fb.png" height="50" width="50" >
         </a>
     </section>
 </body>
