--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     background-color: rgba(255, 255, 255, 0.7);
     width: 260px;
     margin: 20px auto;
+    text-align: center;
     padding: 15px;
   }
   .icon {
@@ -31,23 +32,6 @@
   span {
       color: maroon;
   }
-
-.left, .right {
-  float: left;
-  width: 20%; /* The width is 20%, by default */
-}
-
-.main {
-  float: left;
-  width: 60%; /* The width is 60%, by default */
-}
-
-/* Use a media query to add a breakpoint at 800px: */
-@media screen and (max-width: 800px) {
-  .left, .main, .right {
-    width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
-  }
-}
 </style>
 <body>
     <body style="background: url(abc.jpg); background-size: cover;background-attachment: fixed;"></body>
@@ -128,7 +112,7 @@
            </table>
         </hr>
     </section>
-    <section class="iconbg" style="text-align: center;">
+    <section class="iconbg" style="text-align: center; >
         <a class="icon" href="https://www.instagram.com/swmahardhika/">
             <img src="ig.png" height="50" width="50" >
         </a>
