--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
            </table>
         </hr>
     </section>
-    <section class="iconbg" style="text-align: center; >
+    <section class="iconbg" style="text-align: center; ">
         <a class="icon" href="https://www.instagram.com/swmahardhika/">
             <img src="ig.png" height="50" width="50" >
         </a>
