--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   }
 </style>
 <body>
+    <body style="background: url(abc.jpg); background-size: cover;background-attachment: fixed;"></body>
     <section class="wrap" style="text-align: center;">
         <img style="border-radius: 100%;" style="stroke-width: 10pt;" src="Insta.png" height="200" width="200">
         <h1 class="h1">Satria Wirabuana Mahardhika</h1>
