--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
   }
   .wrap {
       background-color:rgba(255, 255, 255, 0.7);
-      max-width: 800px;
+      max-width: 500px;
       color:black;
       margin: 20px auto;
       padding:15px;
   }
   .iconbg {
     background-color: rgba(255, 255, 255, 0.7);
-    max-width: 260px;
-    margin: 20px auto;
+    max-width: 150px;
+    margin: 15px auto;
     text-align: center;
-    padding: 15px;
+    padding: 10px;
   }
   .icon {
       padding:5px;
@@ -36,19 +36,19 @@
 <body>
     <body style="max-width: 100%; background: url(abc.jpg); background-size: cover;background-attachment: fixed;"></body>
     <section class="wrap" style="text-align: center;">
-        <img style="border-radius: 100%; max-width: 100%; height: auto;"  src="Insta.png">
+        <img style="border-radius: 100%; max-width: 200px; height: auto;"  src="Insta.png">
         <h1 class="h1">Satria Wirabuana Mahardhika</h1>
         <h2 style="font-size: 16px; font-weight: lighter;">"Jika tugas mengganggu mu, maka tinggalkanlah."</h2>
         <h3 style="font-size: 16px; font-weight: bolder;">Universitas Muhammadiyah Yogyakarta</h3>
     </section>
-    <section class="wrap" style="font-size: 15pt;">
-        <table max-width="480px">
+    <section class="wrap" style="font-size: 11pt;">
+        <table max-width="600px">
 
             <tbody>
-              
+
               <tr>
-                <td widht="25%">Tempat, Tanggal Lahir</td>
-                <td widht="1%">:</td>
+                <td max-widht="25%">Tempat, Tanggal Lahir</td>
+                <td max-widht="1%">:</td>
                 <td>Lubuk Linggau, 24 Maret 2001</td>
               </tr>
               <tr>
@@ -65,11 +65,11 @@
         <hr>
         <span><b>Pendidikan Formal</b></span>
         <hr>
-        <table max-width="800px">
+        <table max-width="600px">
             <tbody>
               <tr>
-                <td width="25%">2019 - Sekarang</td>
-                <td width="1%">:</td>
+                <td max-width="25%">2019 - Sekarang</td>
+                <td max-width="1%">:</td>
                 <td>Universitas Muhammadiyah Yogyakarta</td>
               </tr>
               <tr>
@@ -97,7 +97,7 @@
         <hr>
         <span><b>Pengalaman Organisasi</b></span>
         <hr>
-          <table max-width="800px">
+          <table max-width="600px">
            <tbody>
               <tr>
                 <td width="25%">2018 - Sekarang</td>
@@ -115,13 +115,13 @@
     </section>
     <section class="iconbg" style="text-align: center; ">
         <a class="icon" href="https://www.instagram.com/swmahardhika/">
-            <img media="(max-width: 50)"; src="ig.png" height="50">
+            <img media="(max-width: 30px)"; src="ig.png" height="30px">
         </a>
         <a class="icon" href="https://twitter.com/heymyluvv">
-            <img media="(max-width: 50)"; src="tw.png" height="50">
+            <img media="(max-width: 30px)"; src="tw.png" height="30px">
         </a>
         <a class="icon" href="https://www.facebook.com/satriawirabuana/">
-            <img media="(max-width: 50)"; src="fb.png" height="50">
+            <img media="(max-width: 30px)"; src="fb.png" height="30px">
         </a>
     </section>
 </body>
