--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   }
   .wrap {
       background-color:rgba(255, 255, 255, 0.7);
+      border-radius: 10pt;
       max-width: 500px;
       color:black;
       margin: 20px auto;
@@ -20,6 +21,7 @@
   }
   .iconbg {
     background-color: rgba(255, 255, 255, 0.7);
+    border-radius: 10pt;
     max-width: 150px;
     margin: 15px auto;
     text-align: center;
@@ -41,7 +43,7 @@
         <h2 style="font-size: 16px; font-weight: lighter;">"Jika tugas mengganggu mu, maka tinggalkanlah."</h2>
         <h3 style="font-size: 16px; font-weight: bolder;">Universitas Muhammadiyah Yogyakarta</h3>
     </section>
-    <section class="wrap" style="font-size: 11pt;">
+    <section class="wrap" style="font-size: 8pt;">
         <table max-width="600px">
 
             <tbody>
@@ -97,7 +99,7 @@
         <hr>
         <span><b>Pengalaman Organisasi</b></span>
         <hr>
-          <table max-width="600px">
+          <table max-width="400px">
            <tbody>
               <tr>
                 <td width="25%">2018 - Sekarang</td>
