--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Curriculum Vitae</title>
 </head>
 <style>
-  body, h1, h2, p,h3,  a,td, span {
+  body, h1, h2, p, h3, td, span {
       font-family: Arial, Helvetica, sans-serif;
       text-decoration: none;
   }
